--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -24,19 +24,22 @@
 }
 
 .title {
-	// @extend %font-Playfair-Display-700;
-	font-size: 42px;
-	line-height: 72px;
-	margin-bottom: 30px;
 	text-align: center;
-
+}
+.title-rus{
+	text-transform: uppercase;
+	font-size: 34px;
+	@extend %font-Oranienbaum-400;
+	background-color: var(--color-bg);
+	padding-right: 14px;
+	padding-left: 14px;
+}
+.title-chi{
+	@extend %font-Microsoft-Jhenghei-400;
+	font-size: 24px;
 }
 .subtitle {
-	// @extend %font-Muli-400;
-	font-size: 16px;
-	line-height: 20px;
-	text-align: center;
-	margin-bottom: 60px;
+
 }
 
 
