--- a/src/scss/blocks/aboutUs-slider-inside.scss
+++ b/src/scss/blocks/aboutUs-slider-inside.scss
@@ -1,7 +1,9 @@
 .aboutUs {
 }
 .aboutUs__slider-inside {
-
+	&-container {
+		display: none;
+	}
 	margin-bottom: 104px;
 	& .aboutUs {
 		&__slide {
@@ -10,25 +12,39 @@
 			background-position: center;
 			min-height: 398px;
 			border-radius: 10px;
+			background-image: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 100%);
 		}
 		&__slider-text-block {
 			color: var(--color-text-light);
+			text-transform: uppercase;
+			margin-left: 20px;
+			margin-top: calc(100% - 13px);
 		}
 		&__slider-text-main {
+			@extend %font-Oranienbaum-400;
+			font-size: 24px;
+			letter-spacing: 1.44px;
 		}
 		&__slider-text-chi {
+			@extend %font-Microsoft-Jhenghei-400;
+			letter-spacing: 0.86px;
+			font-size: 20px;
 		}
 		&__slide-1 {
-			background-image: url(../img/main/about/zal1-lg.webp);
+			background-image: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 100%),
+				url(../img/main/about/zal1-lg.webp);
 		}
 		&__slide-2 {
-			background-image: url(../img/main/about/zal2-lg.webp);
+			background-image: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 100%),
+				url(../img/main/about/zal2-lg.webp);
 		}
 		&__slide-3 {
-			background-image: url(../img/main/about/zal3-lg.webp);
+			background-image: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 100%),
+				url(../img/main/about/zal3-lg.webp);
 		}
 		&__slide-4 {
-			background-image: url(../img/main/about/vip-lg.webp);
+			background-image: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 100%),
+				url(../img/main/about/vip-lg.webp);
 		}
 		&__slide-5 {
 			background-image: url(../img/main/about/bar-lg.webp);
@@ -43,10 +59,6 @@
 .aboutUs__slider-inside-mini {
 	margin-left: -5px;
 	margin-right: -5px;
-	// display: grid;
-	// grid-template-columns: repeat(2, 1fr);
-	// grid-template-rows: repeat(2, 1fr);
-	// gap: 3px 10px;
 	& .aboutUs {
 		&__mini-slide {
 			background-repeat: no-repeat;
