--- a/src/scss/blocks/_aboutUs.scss
+++ b/src/scss/blocks/_aboutUs.scss
@@ -50,7 +50,7 @@
 		@extend %font-Microsoft-Jhenghei-400;
 	}
 	&__slider-container {
-		min-height: 768px;
+		height: 768px;
 		min-width: 340px;
 		position: relative;
 	}
