--- a/src/scss/blocks/aboutUs-slider-outside.scss
+++ b/src/scss/blocks/aboutUs-slider-outside.scss
@@ -1,8 +1,8 @@
 .aboutUs {
 }
-.aboutUs__slider-outside {
+.aboutUs__slider-outside {height: 398px;
 	&-container {
-		// display: none;
+		display: none;
 	}
 	margin-bottom: 104px;
 	& .aboutUs {
