--- a/src/scss/blocks/aboutUs-slider-inside.scss
+++ b/src/scss/blocks/aboutUs-slider-inside.scss
@@ -1,6 +1,7 @@
 .aboutUs {
 }
-.aboutUs__slider-inside {height: 398px;
+.aboutUs__slider-inside {
+	height: 398px;
 	&-container {
 		// display: none;
 	}
@@ -14,13 +15,10 @@
 			border-radius: 10px;
 		}
 		&__slider-text-block {
-
 			color: var(--color-text-light);
 			text-transform: uppercase;
-
 			margin-left: 20px;
-			margin-top: 334px ;
-	
+			margin-top: 334px;
 		}
 		&__slider-text-main {
 			@extend %font-Oranienbaum-400;
@@ -32,8 +30,8 @@
 			letter-spacing: 0.86px;
 			font-size: 20px;
 		}
-		&__slide-1 { 
-			background-image:  linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 100%),
+		&__slide-1 {
+			background-image: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 100%),
 				url(../img/main/about/zal1-lg.webp);
 		}
 		&__slide-2 {
