--- a/src/scss/blocks/aboutUs-slider-inside.scss
+++ b/src/scss/blocks/aboutUs-slider-inside.scss
@@ -3,7 +3,9 @@
 .aboutUs__slider-inside {
 	height: 398px;
 	&-container {
-		// display: none;
+		// position: absolute;
+		position: relative;
+		transition: all 0.5s;
 	}
 	margin-bottom: 104px;
 	& .aboutUs {
