--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -2,19 +2,20 @@
 	display: none !important;
 }
 
-// .visually-hidden {
-// 	position: absolute;
-// 	width: 1px;
-// 	height: 1px;
-// 	margin: -1px;
-// 	border: 0;
-// 	padding: 0;
-// 	white-space: nowrap;
-// 	clip-path: inset(100%);
-// 	clip: rect(0 0 0 0);
-// 	overflow: hidden;
-// }
-.visually-hidden{
+.visually-hidden {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	white-space: nowrap;
+	clip-path: inset(100%);
+	clip: rect(0 0 0 0);
+	overflow: hidden;
+}
+.aboutUs-slider-hidden {
+	z-index: -10;
 	opacity: 0;
 }
 
@@ -29,7 +30,7 @@
 .title {
 	text-align: center;
 }
-.title-rus{
+.title-rus {
 	text-transform: uppercase;
 	font-size: 34px;
 	@extend %font-Oranienbaum-400;
@@ -37,12 +38,9 @@
 	padding-right: 14px;
 	padding-left: 14px;
 }
-.title-chi{
+.title-chi {
 	@extend %font-Microsoft-Jhenghei-400;
 	font-size: 24px;
 }
 .subtitle {
-
 }
-
-
