--- a/src/scss/blocks/reviews-slider.scss
+++ b/src/scss/blocks/reviews-slider.scss
@@ -8,14 +8,23 @@
 	&__slider-card-inner {
 	}
 	&__slider-card-text {
+		font-size: 14px;
 	}
 	&__slider-card-info {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: min-content 1fr;
 	}
 	&__slider-card-rating {
+		width: 136px;
+		display: grid;
+		grid-template-columns: repeat(5, 1fr);
 	}
 	&__slider-card-date {
+		justify-self: end;
 	}
 	&__slider-card-author {
+		grid-column: 1/3;
 	}
 	&__slider-card-avatar {
 		width: 46px;
@@ -28,8 +37,8 @@
 .svg-main--rewievs--star-dims {
 	height: 24px;
 	width: 24px;
-
 }
-.svg-main--rewievs--star-w-o-fill-dims {	height: 24px;
+.svg-main--rewievs--star-w-o-fill-dims {
+	height: 24px;
 	width: 24px;
 }
