--- a/src/scss/blocks/reviews.scss
+++ b/src/scss/blocks/reviews.scss
@@ -2,8 +2,29 @@
 	&__inner {
 	}
 	&__title-container {
+		position: relative;
+		display: grid;
+		justify-items: center;
+		text-align: center;
+		margin-right: -10px;
+		margin-left: -10px;
+		margin-bottom: 34px;
+		&:before {
+			content: '';
+			position: absolute;
+			display: block;
+			top: 18px;
+			width: 100%;
+			height: 1px;
+			background-color: var(--color-stroke-medium);
+		}
+		&::after {
+			content: '';
+			display: block;
+			height: 75px;
+		}
 	}
-	&__title {
+	&__title {position: absolute;
 	}
 	&__title-rus {
 	}
