--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,10 +38,13 @@
 @import './base/600';
 /*@import './base/640';*/
 /*@import './base/768';*/
+@import './base/900';
 /*@import './base/1000';*/
 /*@import './base/1024';*/
+@import './base/1200';
 /*@import './base/1280';*/
 /*@import './base/1440';*/
+@import './base/1500';
 /*@import './base/1600';*/
 @import './base/1920';
 
