--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -92,10 +92,11 @@
 		display: grid;
 		row-gap: 19px;
 	}
-	&__secondary-block-rules {
+	&__secondary-block-rules-link {
 		max-width: 207px;
 		margin: 0 auto;
 	}
+
 	&__secondary-block-payment {
 		width: 151px;
 		display: flex;
