--- a/src/scss/base/1500.scss
+++ b/src/scss/base/1500.scss
@@ -5,6 +5,16 @@
 			grid-template-columns: repeat(5, 1fr);
 		}
 	}
+	.features {
+		&__list {
+			grid-template-rows: repeat(1, 1fr);
+			grid-template-columns: repeat(4, 1fr);
+			column-gap: 14px;
+		}
+		&__item{
+			max-width: none;
+		}
+	}
 }
 
 // Desktop first
