--- a/src/scss/base/1600.scss
+++ b/src/scss/base/1600.scss
@@ -1,7 +1,7 @@
-//Mobile first
-// @media (min-width: 1600px) {
+// Mobile first
+@media (min-width: 1600px) {
 
-// }
+}
 
 // Desktop first
 // @media (max-width: 1600px) {
