--- a/src/scss/base/1500.scss
+++ b/src/scss/base/1500.scss
@@ -9,12 +9,13 @@
 		&__list {
 			grid-template-rows: repeat(1, 1fr);
 			grid-template-columns: repeat(4, 1fr);
-			column-gap: 14px;
+			// column-gap: 14px;
 		}
 		&__item{
 			max-width: none;
 		}
 	}
+
 }
 
 // Desktop first
