--- a/src/scss/base/600.scss
+++ b/src/scss/base/600.scss
@@ -252,6 +252,12 @@
 				height: 116px;
 			}
 		}
+		&__rus-container {
+			font-size: 18px;
+		}
+		&__chi-text {
+			font-size: 24px;
+		}
 	}
 	// Reviews=============================================================
 	.reviews {
