--- a/src/scss/base/1200.scss
+++ b/src/scss/base/1200.scss
@@ -5,6 +5,14 @@
 			grid-template-columns: repeat(4, 1fr);
 		}
 	}
+	.aboutUs{
+		&__descr{
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+			column-gap: 30px;
+		}
+	}
+
 	.reviews {
 		&__slider {
 			margin-right: -10px;
