--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,57 +1,57 @@
 @font-face {
 	font-family: 'Gilroy';
+	src: url('../fonts/gilroy-lightitalic.woff');
+}
+@font-face {
+	font-family: 'Gilroy';
+	src: url('../fonts/gilroy-regular.woff');
+}
+@font-face {
+	font-family: 'Gilroy';
+	src: url('../fonts/gilroy-medium.woff');
+}
+@font-face {
+	font-family: 'Gilroy';
+	src: url('../fonts/gilroy-bold.woff');
+}
+@font-face {
+	font-family: 'Microsoft Jhenghei';
+	src: url('../fonts/microsoft-jhenghei-regular.woff');
+}
+@font-face {
+	font-family: 'Microsoft Jhenghei';
+	src: url('../fonts/microsoft-jhenghei-bold.woff');
+}
+@font-face {
+	font-family: 'Oranienbaum';
+	src: url('../fonts/Oranienbaum-Regular.woff');
+}
+
+@font-face {
+	font-family: 'Gilroy', Arial, sans-serif;
 	src: url('../fonts/gilroy-lightitalic.ttf');
 }
 @font-face {
-	font-family: 'Gilroy';
+	font-family: 'Gilroy', Arial, sans-serif;
 	src: url('../fonts/gilroy-regular.ttf');
 }
 @font-face {
-	font-family: 'Gilroy';
+	font-family: 'Gilroy', Arial, sans-serif;
 	src: url('../fonts/gilroy-medium.ttf');
 }
 @font-face {
-	font-family: 'Gilroy';
+	font-family: 'Gilroy', Arial, sans-serif;
 	src: url('../fonts/gilroy-bold.ttf');
 }
 @font-face {
-	font-family: 'Microsoft Jhenghei';
+	font-family: 'Microsoft Jhenghei', Arial, sans-serif;
 	src: url('../fonts/microsoft-jhenghei-regular.ttf');
 }
 @font-face {
-	font-family: 'Microsoft Jhenghei';
+	font-family: 'Microsoft Jhenghei', Arial, sans-serif;
 	src: url('../fonts/microsoft-jhenghei-bold.ttf');
 }
 @font-face {
 	font-family: 'Oranienbaum';
 	src: url('../fonts/Oranienbaum-Regular.ttf');
 }
-
-// @font-face {
-// 	font-family: 'Gilroy', Arial, sans-serif;
-// 	src: url('../fonts/gilroy-lightitalic.ttf');
-// }
-// @font-face {
-// 	font-family: 'Gilroy', Arial, sans-serif;
-// 	src: url('../fonts/gilroy-regular.ttf');
-// }
-// @font-face {
-// 	font-family: 'Gilroy', Arial, sans-serif;
-// 	src: url('../fonts/gilroy-medium.ttf');
-// }
-// @font-face {
-// 	font-family: 'Gilroy', Arial, sans-serif;
-// 	src: url('../fonts/gilroy-bold.ttf');
-// }
-// @font-face {
-// 	font-family: 'Microsoft Jhenghei', Arial, sans-serif;
-// 	src: url('../fonts/microsoft-jhenghei-regular.ttf');
-// }
-// @font-face {
-// 	font-family: 'Microsoft Jhenghei', Arial, sans-serif;
-// 	src: url('../fonts/microsoft-jhenghei-bold.ttf');
-// }
-// @font-face {
-// 	font-family: 'Oranienbaum';
-// 	src: url('../fonts/Oranienbaum-Regular.ttf');
-// }
