Сделал стили мобильного меню без адаптации

--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -99,7 +99,7 @@
 		@extend %font-Gilroy-500;
 		font-size: 11px;
 		text-align: right;
-		margin: 13px 17px;
+		// margin: 13px 17px;
 	}
 	&__booking-text {
 	}
