--- a/src/scss/base/1200.scss
+++ b/src/scss/base/1200.scss
@@ -1,12 +1,27 @@
 //Mobile first
 @media (min-width: 1200px) {
+	.mobile-burger-btn {
+		display: none;
+	}
+	.navigation {
+		// margin-left: calc(50% - 616px / 2);
+	}
+	.menu {
+		display: flex;
+		&__link {
+			display: grid;
+			grid-template-rows: repeat(1fr);
+			justify-items: center;
+		}
+	}
+
 	.section-menu {
 		&__card-list {
 			grid-template-columns: repeat(4, 1fr);
 		}
 	}
-	.aboutUs{
-		&__descr{
+	.aboutUs {
+		&__descr {
 			display: grid;
 			grid-template-columns: repeat(2, 1fr);
 			column-gap: 30px;
@@ -23,6 +38,16 @@
 		margin-right: 10px;
 		margin-left: 10px;
 	}
+	.logo {
+		top: 102px;
+	}
+	.header {
+		&__phone {
+			position: static;
+			margin-right: 40px;
+		}
+	}
+
 	.footer {
 		&__inner {
 			padding: 37px 0 28px;
@@ -83,7 +108,6 @@
 		}
 		&__secondary-block-rules-link {
 			max-width: 227px;
-
 		}
 	}
 }
